--- a/domaci.html
+++ b/domaci.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
             max-width: 800px;
             margin: 0 auto;
         }
@@ -17,9 +16,9 @@
         }
 
         th, td {
-            padding: 8px;
+            padding: 4px;
             text-align: left;
-            white-space: nowrap; /* Dodato kako bi se sprečilo prelamanje teksta */
+            white-space: nowrap;
         }
 
         th {
@@ -33,7 +32,7 @@
 
         button {
             margin-top: 10px;
-            display: inline-block; /* Dodao sam ovu liniju kako bi dugme bilo u liniji sa +/- dugmadima */
+            display: inline-block;
         }
 
         input[type="number"] {
